# enotion

./: .gitignore  LICENSE  Makefile  README.md  com.github.rafaelcn.enotion.yml  meson.build
data/: enotion.desktop  enotion.metainfo.xml
src/: Application.vala  MainWindow.vala
